commit on cweckhardt

--- a/09_linreg_regularization_student.ipynb
+++ b/09_linreg_regularization_student.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "from sklearn.linear_model import LinearRegression, Ridge, RidgeCV, Lasso, LassoCV\n",
     "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n",
-    "import plotnine as pn\n"
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n"
    ]
   },
   {
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +238,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,18 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.          1.74023441  0.          2.55563706 -0.          0.04030546\n",
-      "  0.          0.          0.          0.         -0.         -0.\n",
-      " -0.          0.          0.          0.38676971 -0.          0.69308938\n",
-      "  0.          3.96090209]\n",
-      "c-v R^2: 0.9085724964244137 c-v MSE: 0.1856678640282654\n"
+     "ename": "NameError",
+     "evalue": "name 'cross_val_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mcross_val_score\u001b[49m(model, X, y, cv\u001b[38;5;241m=\u001b[39mkf, scoring\u001b[38;5;241m=\u001b[39mmse)\n\u001b[1;32m      2\u001b[0m cv_mse \u001b[38;5;241m=\u001b[39m res\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      3\u001b[0m res \u001b[38;5;241m=\u001b[39m cross_val_score(model, X, y, cv\u001b[38;5;241m=\u001b[39mkf)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cross_val_score' is not defined"
      ]
     }
    ],
@@ -547,12 +546,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_diabetes\n",
     "X_diabetes, y_diabetes = load_diabetes(return_X_y=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "      <th>x4</th>\n",
+       "      <th>x5</th>\n",
+       "      <th>x6</th>\n",
+       "      <th>x7</th>\n",
+       "      <th>x8</th>\n",
+       "      <th>x9</th>\n",
+       "      <th>x10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>x12</th>\n",
+       "      <th>x13</th>\n",
+       "      <th>x14</th>\n",
+       "      <th>x15</th>\n",
+       "      <th>x16</th>\n",
+       "      <th>x17</th>\n",
+       "      <th>x18</th>\n",
+       "      <th>x19</th>\n",
+       "      <th>x20</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.126504</td>\n",
+       "      <td>0.477706</td>\n",
+       "      <td>0.313475</td>\n",
+       "      <td>0.514386</td>\n",
+       "      <td>0.743750</td>\n",
+       "      <td>0.234681</td>\n",
+       "      <td>0.671997</td>\n",
+       "      <td>0.270976</td>\n",
+       "      <td>0.519267</td>\n",
+       "      <td>0.361153</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.571807</td>\n",
+       "      <td>0.281180</td>\n",
+       "      <td>0.814374</td>\n",
+       "      <td>0.527172</td>\n",
+       "      <td>0.550691</td>\n",
+       "      <td>0.021509</td>\n",
+       "      <td>0.028173</td>\n",
+       "      <td>0.837283</td>\n",
+       "      <td>0.261703</td>\n",
+       "      <td>4.077128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.121590</td>\n",
+       "      <td>0.483381</td>\n",
+       "      <td>0.724387</td>\n",
+       "      <td>0.818556</td>\n",
+       "      <td>0.872479</td>\n",
+       "      <td>0.441711</td>\n",
+       "      <td>0.795640</td>\n",
+       "      <td>0.474486</td>\n",
+       "      <td>0.157817</td>\n",
+       "      <td>0.251904</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.403155</td>\n",
+       "      <td>0.372762</td>\n",
+       "      <td>0.226465</td>\n",
+       "      <td>0.002351</td>\n",
+       "      <td>0.089564</td>\n",
+       "      <td>0.913374</td>\n",
+       "      <td>0.911584</td>\n",
+       "      <td>0.784988</td>\n",
+       "      <td>0.035362</td>\n",
+       "      <td>4.981252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.698551</td>\n",
+       "      <td>0.036947</td>\n",
+       "      <td>0.723721</td>\n",
+       "      <td>0.459921</td>\n",
+       "      <td>0.602351</td>\n",
+       "      <td>0.560279</td>\n",
+       "      <td>0.028867</td>\n",
+       "      <td>0.414398</td>\n",
+       "      <td>0.104540</td>\n",
+       "      <td>0.906528</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.960674</td>\n",
+       "      <td>0.529909</td>\n",
+       "      <td>0.911473</td>\n",
+       "      <td>0.828246</td>\n",
+       "      <td>0.468373</td>\n",
+       "      <td>0.582552</td>\n",
+       "      <td>0.527382</td>\n",
+       "      <td>0.470915</td>\n",
+       "      <td>0.756324</td>\n",
+       "      <td>6.649698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.198011</td>\n",
+       "      <td>0.724938</td>\n",
+       "      <td>0.713586</td>\n",
+       "      <td>0.493570</td>\n",
+       "      <td>0.812774</td>\n",
+       "      <td>0.665962</td>\n",
+       "      <td>0.496994</td>\n",
+       "      <td>0.145470</td>\n",
+       "      <td>0.929903</td>\n",
+       "      <td>0.299357</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.370109</td>\n",
+       "      <td>0.862206</td>\n",
+       "      <td>0.275417</td>\n",
+       "      <td>0.717374</td>\n",
+       "      <td>0.265629</td>\n",
+       "      <td>0.952450</td>\n",
+       "      <td>0.387913</td>\n",
+       "      <td>0.477727</td>\n",
+       "      <td>0.566269</td>\n",
+       "      <td>6.034292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.160674</td>\n",
+       "      <td>0.462549</td>\n",
+       "      <td>0.399120</td>\n",
+       "      <td>0.062895</td>\n",
+       "      <td>0.933785</td>\n",
+       "      <td>0.942120</td>\n",
+       "      <td>0.269115</td>\n",
+       "      <td>0.780801</td>\n",
+       "      <td>0.452808</td>\n",
+       "      <td>0.047896</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.766598</td>\n",
+       "      <td>0.838162</td>\n",
+       "      <td>0.351654</td>\n",
+       "      <td>0.207323</td>\n",
+       "      <td>0.760390</td>\n",
+       "      <td>0.860970</td>\n",
+       "      <td>0.993952</td>\n",
+       "      <td>0.417981</td>\n",
+       "      <td>0.991003</td>\n",
+       "      <td>7.588461</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x1        x2        x3        x4        x5        x6        x7  \\\n",
+       "0  0.126504  0.477706  0.313475  0.514386  0.743750  0.234681  0.671997   \n",
+       "1  0.121590  0.483381  0.724387  0.818556  0.872479  0.441711  0.795640   \n",
+       "2  0.698551  0.036947  0.723721  0.459921  0.602351  0.560279  0.028867   \n",
+       "3  0.198011  0.724938  0.713586  0.493570  0.812774  0.665962  0.496994   \n",
+       "4  0.160674  0.462549  0.399120  0.062895  0.933785  0.942120  0.269115   \n",
+       "\n",
+       "         x8        x9       x10  ...       x12       x13       x14       x15  \\\n",
+       "0  0.270976  0.519267  0.361153  ...  0.571807  0.281180  0.814374  0.527172   \n",
+       "1  0.474486  0.157817  0.251904  ...  0.403155  0.372762  0.226465  0.002351   \n",
+       "2  0.414398  0.104540  0.906528  ...  0.960674  0.529909  0.911473  0.828246   \n",
+       "3  0.145470  0.929903  0.299357  ...  0.370109  0.862206  0.275417  0.717374   \n",
+       "4  0.780801  0.452808  0.047896  ...  0.766598  0.838162  0.351654  0.207323   \n",
+       "\n",
+       "        x16       x17       x18       x19       x20         y  \n",
+       "0  0.550691  0.021509  0.028173  0.837283  0.261703  4.077128  \n",
+       "1  0.089564  0.913374  0.911584  0.784988  0.035362  4.981252  \n",
+       "2  0.468373  0.582552  0.527382  0.470915  0.756324  6.649698  \n",
+       "3  0.265629  0.952450  0.387913  0.477727  0.566269  6.034292  \n",
+       "4  0.760390  0.860970  0.993952  0.417981  0.991003  7.588461  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -565,9 +773,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "UFRC Python-3.8",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3-3.8-ufrc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -579,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
